compiler/testData/diagnostics/tests/multiplatform/hmpp/kt-55570.kt
// FIR_IDENTICAL
// IGNORE_FIR_DIAGNOSTICS
// RUN_PIPELINE_TILL: BACKEND
// MODULE: common

// MODULE: main()()(common)
actual class <!ACTUAL_WITHOUT_EXPECT!>A<!>
